# elabastecedor

./: 20231231_routes.json  20240104_products.csv  20240104_routes.json  20240111_routes.json  Makefile  README.md  data-analysis.ipynb  data-modeling.ipynb  datasets-fix.ipynb  main.ipynb  main.py  pyproject.toml
.github/workflows/: main.yml
data/: 20231231_products.csv  20240104_products.csv  20240107_products.csv  20240107_routes.json  20240111_products.csv  20240111_routes.json  20240114_products.csv  20240117_products.csv  20240121_products.csv  20240124_products.csv  20240128_products.csv  20240131_products.csv  20240204_products.csv  20240207_products.csv  20240211_products.csv  20240214_products.csv  20240218_products.csv  20240221_products.csv  20240225_products.csv  20240228_products.csv  20240303_products.csv  20240306_products.csv  20240310_products.csv  20240313_products.csv  20240317_products.csv  20240320_products.csv  20240324_products.csv  20240327_products.csv  20240331_products.csv  20240403_products.csv  20240407_products.csv  20240410_products.csv  20240414_products.csv  20240417_products.csv  20240421_products.csv  20240424_products.csv  20240428_products.csv  20240501_products.csv  20240505_products.csv  20240508_products.csv  (+54 more)
